--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+/config/database.yml
+/config/initializers/secret_token.rb
+/config/setting.yml
+
