--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,5 @@
 /tmp
 
 config/database.yml
-config/initializers/secret_token.rb
-config/setting.yml
+#config/initializers/secret_token.rb
+#config/setting.yml
